ready for production

--- a/.env
+++ b/.env
@@ -1,15 +1,17 @@
 // This will store all our passwords and reusable code bases addresses.
 
-MONGO_URI = 
+MONGO_URI = mongodb+srv://Adoose:Adoose@cluster0.1qqpp.mongodb.net/Adoose?retryWrites=true&w=majority
 PORT = 5000
-MAIL_ID = 
-MAIL_PASS= 
+MAIL_ID = theadoose@gmail.com
+MAIL_PASS= theadoose.269875
 
 AuthTokenKey = Token
-JWT_SECRET = 
+JWT_SECRET = abcredhjjj
 BCRYPT_SALT = 12
 
-Razorpay_key_id = 
-Razorpay_key_secret = 
+Razorpay_key_id = rzp_test_FO43O4HRZsAP2y
+Razorpay_key_secret = A1aae2aEcpN3oF8irWqFYztc
 WebsiteURL = https://localhost:3000/user/verification/
 WebsiteURLForget = https://localhost:3000/user/forget/
+
+NODE_MODULES_CACHE=false
