backend api url updated

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ BCRYPT_SALT = 12
 
 Razorpay_key_id = rzp_test_FO43O4HRZsAP2y
 Razorpay_key_secret = A1aae2aEcpN3oF8irWqFYztc
-WebsiteURL = https://localhost:3000/user/verification/
-WebsiteURLForget = https://localhost:3000/user/forget/
+WebsiteURL = https://adoose-backend.herokuapp.com/user/verification/
+WebsiteURLForget = https://adoose-backend.herokuapp.com/user/forget/
 
 NODE_MODULES_CACHE=false
