email edit by suraj

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 // This will store all our passwords and reusable code bases addresses.
-
+//theadoose@gmail.com
+//theadoose.269875
 MONGO_URI = mongodb+srv://Adoose:Adoose@cluster0.1qqpp.mongodb.net/Adoose?retryWrites=true&w=majority
 PORT = 5000
-MAIL_ID = theadoose@gmail.com
-MAIL_PASS= theadoose.269875
+MAIL_ID = surajram.nitj@gmail.com
+MAIL_PASS= Suraj@6375255436
 
 AuthTokenKey = Token
 JWT_SECRET = abcredhjjj
